Changelog
=========

2.0.3 - (unreleased)
--------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

2.0.2 - 2010-12-23
------------------

- Recover from parse error on ``updated`` date.
  [malthe]

- Display full creator name in review portlet.
  [thomasdesvenain]

- Do not display portlets add select list if it is empty.
  [thomasdesvenain]

- Recent items and Review list portlets title is got by a title attribute
  on the renderer.
  [thomasdesvenain]

- Fix the IPortletDirective schema's default edit_permission to match
  the default that is actually supplied by the directive's implementation.
  [davisagli]

- Fix RSS portlet edge case. The feedparser may not have a 'bozo' attribute
  if libxml2 is not present on the system.
  [stefan]

2.0.1 - 2010-09-09
------------------

- Proper checkup for navigation portlet's title - we don't show it
  unless the title is explicitly specified.
  [spliter]

2.0 - 2010-07-18
----------------

- Update license to GPL version 2 only.
  [hannosch]

2.0b11 - 2010-06-13
-------------------

- Stop abusing traditional layers to do database changes.
  [hannosch]

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Avoid using the deprecated five:implements directive.
  [hannosch]

- Updated to use five.formlib.
  [hannosch]

2.0b10 - 2010-06-03
-------------------

- Fixed an issue with the portlet calendar cache not being invalidated
  when adding a new event in the last day of the month. This closes
  http://dev.plone.org/plone/ticket/10598.
  [deo]

- Moved condition for navigation portlet's title to DT element. We
  don't need empty DT in case title is not provided for the portlet.
  [spliter]

- Fix GS export of portlets assignments
  when property is a tuple or a list
  https://dev.plone.org/plone/ticket/10530
  [macadames]

- Remove deprecated use of tabindex.
  [edegoute]

- Fix regressions in date handling in events portlet.
  Fixes http://dev.plone.org/plone/ticket/10506.