@@ -4,6 +4,10 @@ Changelog
 2.0.3 - (unreleased)
 --------------------
 
+- Enable managing portlets of default pages.
+  This fixes http://dev.plone.org/plone/ticket/10672
+  [fRiSi]
+  
 - Depend on ``Products.CMFPlone`` instead of ``Plone``.
   [elro]
 
